--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 base64 = { version = "0.22" }
-bitmask-enum = { version = "2.2" }
+bitflags = { version = "2.6", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
 from-to-repr = { version = "0.2", features = ["from_to_other"] }
